# Grep

./: .gitignore  CMakeLists.txt  README.md  grepEngine.cpp  handleInput.cpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
Demo_Files/: demo.txt  demo2.txt
include/: grepEngine.h  handleInput.h
